--- a/config/config_robot.ini
+++ b/config/config_robot.ini
@@ -4,15 +4,15 @@ depthOffset=0
 filterBlurredImages=false
 
 [camera_topics]
-depth=/kinect2/hd/image_depth/image_depth_rect
-color=/kinect2/hd/rgb/image_color
+depth=/kinect2/hd/image_depth_rect
+color=/kinect2/hd/image_color_rect
 camInfo=/kinect2/hd/camera_info
-depthHints=compressedDepth
+depthHints=compressed
 colorHints=compressed
 
 [tf]
-from=/head_mount_kinect_rgb_optical_frame
-to=/map
+from=/head_mount_kinect2_rgb_optical_frame
+to=/base_footprint
 lookupViewpoint=true
 onlyStableViewpoints=true
 maxViewpointDistance=0.01
